--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,16 +18,22 @@
     color: black !important;
 }
 .head{
+    position: relative;
     display: flex;
-    width: 100%;
-    height: 400px;
-    /* background-color: aqua; */
+    width: 100wh;
+    height: 500px;
     justify-content: center;
     align-items: center;
     margin: 0;
     padding: 0;
     flex-direction: column;
     background-image: url('../../images/bannerbackground.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+.bg{
+    
 }
 .SearchBar{
     border-radius: 22px !important;
