--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -19,8 +19,9 @@
 }
 .head{
     position: relative;
+    text-align: center;
     display: flex;
-    width: 100wh;
+    width: 100%;
     height: 500px;
     justify-content: center;
     align-items: center;
@@ -30,10 +31,11 @@
     background-image: url('../../images/bannerbackground.png');
     background-repeat: no-repeat;
     background-size: cover;
+    overflow: hidden;
+    background-position: center;
 
 }
 .bg{
-    
 }
 .SearchBar{
     border-radius: 22px !important;
