woking on carosel

--- a/src/components/FoodContainer/FContainer.css
+++ b/src/components/FoodContainer/FContainer.css
@@ -1,9 +1,12 @@
+:root{
+    --grid:grid
+}
 .cardGrp{
-    display: grid;
+    display: var(--grid);
      grid: repeat(2,450px) / auto-flow 1fr;
      margin: auto;
 }
-@media screen and (max-width:660px){
+@media screen and (max-width:700px){
     .cardGrp{
         display: grid;
          grid: repeat(6,450px) / auto-flow 1fr;
