--- a/src/components/About/AboutCard.css
+++ b/src/components/About/AboutCard.css
@@ -8,13 +8,30 @@
 .imageGrp1 p{
     margin-right: 7%;
 }
+.imageGrp1 h3{
+    margin-top: 10px;
+}
+
 .seeBtn{
     font-weight: 600 !important;
     color: blue;
     border: none;
     margin-bottom: 10px;
+    background-color: white;
 }
 @media screen and (max-width: 700px){
-
-    
+    .imageGrp1 img{
+        margin-left: 8%;
+    }
+    .seeBtn{
+        font-weight: 600 !important;
+        color: blue;
+        border: none;
+        margin-bottom: 10px;
+        background-color: white;
+        margin-left: 38%;
+    }
+    .imageGrp1 h3{
+        margin-left: 30%;
+    }
 }
