--- a/src/components/ViewFoodItem/ViewFoodItem.css
+++ b/src/components/ViewFoodItem/ViewFoodItem.css
@@ -1,5 +1,5 @@
 .imageCon{
-    height: 50% !important;
+    height: 450px !important;
     margin-left: 15%;
 }
 .viewItem{
@@ -54,7 +54,12 @@
 .carousel-inner{
 width: 300px !important;
 }
-
+.itemCon{
+    display: flex;
+}
+.carousel-control-next {
+    right: 65% !important;
+}
 
 @media screen and (max-width:700px){
     :root{
